# lockpy

./: .gitignore  LICENSE  READEME  README.md  pyproject.toml
.github/workflows/: lint.yaml  run_test.yaml  test_lint.yaml
docs/: index.md
lockpy/: __init__.py  lock_client.py  resource_lock.py
lockpy/backend/: __init__.py  base_backend.py  dynamo.py
lockpy/lock/: baselock.py  dynamo.py
lockpy/models/: __init__.py  exceptions.py  lock.py
test/lock/: test_dynamo.py
